welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: ';' expected but 'return' found.
      recule return false
             ^